# summer-api

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
app/: audo_creator.py  main.py  nytime_client.py  nytimes_client.py  story_formatter.py  summariser.py  summarizer.py
